[package]
name = "bls-verification-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amcl = { git = "https://github.com/sigp/incubator-milagro-crypto-rust.git", default-features = false, features = ["bls381"]}
near-sdk = { git = "https://github.com/olga24912/near-sdk-rs.git", branch = "bls12-381" }

[dev-dependencies]
workspaces = "0.6"
tokio = { version = "1.1", features = ["rt", "macros"] }
serde_json = "1.0.74"
eth-types =  { path = "../../rainbow-bridge/contracts/near/eth-types" }
bitvec = "1.0.0"
eth2-utility =  { path = "../../rainbow-bridge/contracts/near/eth2-utility" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm"}

[patch]
[patch.crates-io]
eth2_hashing = { path = "../../rainbow-bridge/contracts/near/eth2_hashing" }
near-sdk = { git = "https://github.com/olga24912/near-sdk-rs.git", branch = "bls12-381" }