[package]
name = "bls-verification-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amcl = { git = "https://github.com/sigp/incubator-milagro-crypto-rust.git", default-features = false, features = ["bls381"]}
near-sdk = { git = "https://github.com/olga24912/near-sdk-rs.git", branch = "bls12-381" }

[dev-dependencies]
workspaces = "0.6"
tokio = { version = "1.1", features = ["rt", "macros"] }
serde_json = "1.0.74"
eth-types = { git = "https://github.com/aurora-is-near/rainbow-bridge.git", tag = "eth2-client-0.4.0" }
bitvec = "1.0.0"
eth2-utility = { git = "https://github.com/aurora-is-near/rainbow-bridge.git", tag = "eth2-client-0.4.0" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm"}

[patch]
[patch.crates-io]
eth2_hashing = { git = "https://github.com/aurora-is-near/rainbow-bridge.git", tag = "eth2-client-0.4.0" }
near-sdk = { git = "https://github.com/olga24912/near-sdk-rs.git", branch = "bls12-381" }
parity-secp256k1 = {git = "https://github.com/paritytech/rust-secp256k1", tag = "parity-secp256k1-v0.7.0"}